# gmsl

./: .gitignore  README.md
gmsl-serdes/: cut_wire.py  example1.py  eye_mapper.py  hw3_hw4.py  main.py  requirements.txt  scope.md  scratch.py
gmsl-serdes/sparams/: cableA+D+B+E+C_6.45m.s2p  cableA+D+B_4.3m.s2p  cableA_10m_8interconnect.s2p  cableA_2m.s2p  cableA_2m_-20C.s2p  cableA_2m_85C.s2p  cableA_4m_2interconnect.s2p  cableA_6m_4interconnect.s2p  cableA_8m_6interconnect.s2p  cableB_2m.s2p  cableC_2m.s2p  cableD+E_0.3m.s2p  cableD_0.15m.s2p  cableE_0.15m.s2p
gmsl-serdes/sparams/cut/: cut_wire_base.s2p  cut_wire_copper.s2p  cut_wire_copper_bare.s2p  cut_wire_copper_ur1.s2p  cut_wire_copper_ur2.s2p  cut_wire_copper_ur3.s2p
scripts/: gmsl2.py  gmsl_comms.py
scripts/bash/: i2c_xfer.sh
scripts/py/: gmsl2.py  gmsl_local_sleep.py  gmsl_sleep.py
scripts/py/channel_spec/: channelspec.py
scripts/py/edid/: gmsl_edid_formatter.py  output.csv
scripts/py/eyemapper/: eye_data.csv
scripts/py/gmsl2/: gmsl2.py  pyproject.toml
scripts/py/gmsl2/src/gmsl2/: gmsl2.py
scripts/py/gmslSpellCheck/: Caption_Library - Copy.xlsx  GMSL176A - ESD Basics rev a-en-US_spellcheck.vtt  GMSL206A - Video Pipe Basics rev a-en-US.vtt  GMSL236A.96751 - MAX96751 Configurations rev a-en-US_spellcheck.vtt  caption_library.csv  gmslSpellCheck.py  new_vtt.vtt  output.csv  requirements.txt  sentences.txt  test.py
scripts/py/helpers/: vtt2script.py
scripts/py/video2pdf/: video2pdf.py  (+2 more)
src/bash/: cpp_to_i2ctransfer.py  gmsl.txt  i2c_write_sleep.sh  i2c_write_wake.sh
src/c/: gmsl.c  gmsl.h
(+39 files in other folders)
